# fin-bash

./: .gitignore  README.md  pyproject.toml
config/: fin-bash.example.yaml
fin_bash/: __init__.py  calendar.py  cli.py  config.py  logger.py
tests/: test_calendar.py  test_cli.py  test_logging_config.py
